# joannas_adventure

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  README.md  build_miyoo.sh  config.json  contributions.md  imgui.ini  launch.sh  refactor_sfml.py  vcpkg-configuration.json  vcpkg.json
assets/: map.json
assets/dialog/: dialog.json
assets/environment/map/: map.json  map_village.  map_village.json  map_village2.json  map_village3.json  map_village4.json  newmap.json  tileset.tsx
assets/shader/: crt_shader.frag
include/: tileson.hpp
include/joanna/core/: audio.h  audio.h.orig  audio.h.rej  combat_types.h  combattypes.h  game.h  game_state.h  gamestatus.h  graphics.h  postprocessing.h  renderengine.h  savegamemanager.h  windowmanager.h
include/joanna/entities/: enemy.h  entity.h  entityutils.h  interactable.h  interactionbutton.h  inventory.h  npc.h  player.h  stats.h
include/joanna/entities/interactables/: chest.h  stone.h
include/joanna/game/combat/: combat_system.h
include/joanna/systems/: audiomanager.h  combat_system.h  controller.h  font_renderer.h  gameover.h  menu.h
include/joanna/utils/: debug.h  dialogue_box.h  filesystem.h  logger.h  resourcemanager.h
include/joanna/world/: tilemanager.h
src/: game.cpp  game.h  main.cpp  tilemanager.cpp  tilemanager.h
src/app/: main.cpp
src/core/: game.cpp  game.h  graphics.cpp  graphics.cpp.orig  logger.cpp  main.cpp  menu.cpp  menu.h  postprocessing.cpp  postprocessing.h  savegamemanager.cpp  tilemanager.cpp  tilemanager.h  windowmanager.cpp  windowmanager.h
src/core/renderer/: postprocessing.cpp  renderengine.cpp
src/core/window/: windowmanager.cpp
src/entities/: enemy.cpp  entity.cpp
src/entities/components/: info.txt  interactionbutton.cpp  stats.cpp
src/entities/enemies/: enemy.cpp  info.txt
src/entities/interactables/: chest.cpp  stone.cpp
src/entities/items/: info.txt
src/entities/npcs/: info.txt  npc.cpp
src/entities/player/: inventory.cpp  inventory.h  player.cpp  player.h
src/entities/utils/: animation.cpp  animation.h  controller.cpp  controller.h  entityutils.cpp  interactable.cpp
src/game/combat/: combat_system.cpp  info.txt
src/game/inventory/: info.txt  inventory.cpp
src/game/quests/: info.txt
src/game/states/: info.txt
src/sprites/: character.cpp  character.h
src/systems/: combat_system.cpp
src/systems/audio/: audiomanager.cpp  info.txt
src/systems/input/: controller.cpp
src/systems/ui/: dialogue_box.cpp  font_renderer.cpp  gameover.cpp  menu.cpp  menu.h
src/ui/: font_renderer.cpp  font_renderer.h  menu.cpp  menu.h
src/utils/: debug.cpp  filesystem.cpp  logger.cpp
src/world/: tilemanager.cpp
test/: test.cpp  test_enemy.cpp  test_inventory.cpp  test_player.cpp
tiled/: buildings.tsx  project.tmx  terrain.tsx
